--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;User ID=root;Password=Comeonall1;Port=3306;Database=gokstadlibrary"
+    "DefaultConnection": "server=localhost;database=gokstadlibrary;user=root;password=Comeonall1;"
   },
   "Logging": {
     "LogLevel": {
